force-app/main/default/objects/PDF_ESignature_Source_Chunk__c/PDF_ESignature_Source_Chunk__c.object-meta.xml
<CustomObject>
    <description>Cached source PDF chunks used by the public signer page so the Site Guest User does not need direct ContentVersion access.</description>
    <label>PDF E-Signature Source Chunk</label>
    <nameField>
        <displayFormat>PESSC-{000000}</displayFormat>
        <label>PDF E-Signature Source Chunk Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PDF E-Signature Source Chunks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>