force-app/main/default/objects/PDF_ESignature_Source_Chunk__c/fields/Envelope__c.field-meta.xml
<CustomField>
    <fullName>Envelope__c</fullName>
    <label>Envelope</label>
    <referenceTo>PDF_ESignature_Envelope__c</referenceTo>
    <relationshipLabel>E-Signature Source Chunks</relationshipLabel>
    <relationshipName>PDF_ESignature_Source_Chunks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>